Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntObjNumObj.quorum
class Main
    action main
        Number n
        Integer int
        n:setValue(7.5)
        int = cast(Integer, n)
        if int:GetValue() = 7
            output "passed"
        end
    end
end